--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="24dp"
         android:text="@string/warning_text"/>
+
     <TextView
         android:id="@+id/answer_text_view"
         android:layout_width="wrap_content"
@@ -26,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="@string/show_answer_button"/>
 
+    <TextView
+        android:id="@+id/api_level_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        tools:text="API Level XX"/>
 </LinearLayout>
